# clash-app

./: .eslintrc.cjs  .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.module.css  App.tsx  main.tsx  styles.css  theme.css  type.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/libs/: mod.rs
src-tauri/src/libs/api/: mod.rs
src-tauri/src/libs/conf/: handoff.rs  mod.rs  mode.rs
src-tauri/src/libs/dirs/: mod.rs
src-tauri/src/libs/profile/: mod.rs
src-tauri/src/libs/proxy/: mod.rs
src-tauri/src/libs/rules/: mod.rs
src/Layouts/: Side.tsx  index.css  index.module.css
src/components/: index.ts
src/components/Button/: Button.tsx  index.module.css
src/components/Input/: Input.tsx  index.module.css
src/components/LangSwitcher/: LangSwitcher.tsx  index.module.css  index.ts
src/components/Pudding/: Pudding.tsx  index.module.css  index.ts
src/components/ThemeSwitcher/: ThemeSwitcher.tsx  index.module.css
src/components/ToolBar/: ToolBar.tsx  index.module.css
src/hooks/: index.ts  useLocals.ts
src/locales/: en.ts  index.ts  zh-CN.ts
src/pages/Connections/: Connections.tsx  index.ts
src/pages/Feedback/: Feedback.tsx  index.ts
src/pages/General/: General.tsx
src/pages/Logs/: Logs.tsx  index.ts
src/pages/Profiles/: Profiles.tsx  index.module.css  index.ts
src/pages/Profiles/Components/: Header.tsx
src/pages/Profiles/Components/Card/: Card.tsx  index.module.css
src/pages/Proxies/: Proxies.tsx  index.module.css  index.ts
src/pages/Proxies/components/: Direct.tsx  Global.tsx  Header.tsx  Rule.tsx  Script.tsx  index.module.css  index.ts
src/pages/Settings/: Settings.tsx
src/storage/: index.ts  rule.ts
(+13 files in other folders)
