[package]
name = "clash-app"
version = "0.0.0"
description = "Clash Client"
authors = ["silence"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/libs/mod.rs"
name = "clash"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
mock4rs = "0.1.1"
tracing-subscriber = "0.3.16"
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
toml = "0.7.3"
reqwest = { version = "0.11.16", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
